# graft

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  audit_report.md  baseline_metrics.json  coverage.json  coverage_report.json  final_metrics.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: DESIGN.md
src/graft/: __init__.py  agent.py  artifacts.py  cli.py  config.py  graph.py  guardrails.py  state.py  ui.py
src/graft/stages/: __init__.py  _helpers.py  discover.py  execute.py  grill.py  plan.py  research.py  verify.py
tests/: test_agent.py  test_artifacts.py  test_cli.py  test_cli_commands.py  test_config.py  test_discover.py  test_discover_node.py  test_execute.py  test_graph.py  test_grill.py  test_guardrails.py  test_plan.py  test_research.py  test_research_node.py  test_state.py  test_ui.py  test_verify.py  test_verify_node.py
