[project]
name = "graft"
version = "0.1.0"
description = "AI-powered feature building for existing codebases — discover, research, grill, plan, execute, verify, and open a PR."
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=13.0.0",
    "langgraph>=0.4.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
graft = "graft.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graft"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
